# arctl

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  adaptive_core.py  integrations.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  telemetry.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  scorecard.yml  tests.yml
arctl/: __init__.py
arctl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arctl/core/: __init__.py  anchors.py  chronos.py  icarus.py  kernel.py  mythos.py  profiles.py  states.py
arctl/engine/: __init__.py  synthesizer.py
arctl/verification/: __init__.py  lexical.py  metrics.py  uncertainty.py
docs/: ARCHITECTURE.md  QUICKSTART.md  TESTING.md  TROUBLESHOOTING.md
examples/: arctl_in_inference_loop.py  basic_usage.py  resonance_demo.py  telemetry_simulation.py  visualize_phase_space.py
experiments/: README.md  simulation_experiment.py
spec/: kernel.tla
tests/: __init__.py  benchmarks.py  test_core.py  test_icarus.py  test_integration.py
tla/: adaptive_core.tla
