[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arctl"
version = "1.2.0"
description = "Hybrid Control Systems for LLMs (Deterministic + Semantic)"
readme = "README.md"
authors = [{ name = "Graevka", email = "graevka@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
verification = ["sentence-transformers"]
viz = ["matplotlib"]
full = ["sentence-transformers", "matplotlib"]

[project.urls]
Homepage = "https://github.com/graevka-lab/arctl"