[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arctl"
version = "1.2.0"
description = "Hybrid Control Systems for LLMs (Deterministic + Semantic)"
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
authors = [
    { name = "Graevka", email = "graevka@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
verification = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
viz = ["matplotlib>=3.5.0"]
full = ["sentence-transformers>=2.2.0", "matplotlib>=3.5.0", "torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/graevka-lab/arctl"

[tool.setuptools]
packages = ["arctl"]