[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arctl"
version = "1.3.1"
description = "Hybrid Control Systems for LLMs (Deterministic + Semantic)"
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
authors = [
    { name = "Graevka", email = "graevka@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.2",
]

[project.optional-dependencies]
verification = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
viz = ["matplotlib>=3.5.0"]
full = ["sentence-transformers>=2.2.0", "matplotlib>=3.5.0", "torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/graevka-lab/arctl"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "bandit>=1.9.3; python_version >= '3.10'",
    "mypy>=1.0",
    "pytest>=6.0",
]

[tool.setuptools]
packages = ["arctl"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "C4"]
ignore = ["E501"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
